upgrade framework to Neo4j 4.0.8